testing fix for overflow issue

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,6 +10,10 @@ body {
   background-color: #F5F5F5 !important;
 }
 
+.site-wrapper {
+  overflow-x: hidden;
+}
+
 
 /* FONTS */
 .fc-mono {
